--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.0'
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
+//	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '3.3.0'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
